# yakshave

./: .bandit  .gitignore  .htmlvalidate.json  CLAUDE.md  DEPRECATION_DELETION_PLAN.md  IMPLEMENTATION_SUMMARY_ISSUE_102.md  MIGRATION_SIMPLIFIED_CLI.md  PLAYWRIGHT_VALIDATION_SUMMARY.md  PROJECT_PLAN.md  README.md  bandit-report.json  fix_a11y.py  pyproject.toml
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: award_idea.md  bug_report.md  config.yml  feature_request.md  metric_request.md
.github/workflows/: CI_WORKFLOW.md  QUICK_START.md  ci.yml  deploy-pages.yml
.hive-mind/: config.json  hive.db  hive.db-shm  hive.db-wal
.hive-mind/sessions/: hive-mind-resume-session-1766030602611-hxomcbldd-1766030622569.txt  hive-mind-resume-session-1766030602611-hxomcbldd-1766073723393.txt  hive-mind-resume-session-1766030602611-hxomcbldd-1766075076719.txt  hive-mind-resume-session-1766030602611-hxomcbldd-1766075299444.txt  hive-mind-resume-session-1766030602611-hxomcbldd-1766114455945.txt  session-1766030602611-hxomcbldd-auto-pause.json  session-1766030602611-hxomcbldd-auto-save-1766030613017.json
config/: awards.example.yaml  config.example.yaml  config.yaml  demo-williamzujkowski-2024.yaml  demo-williamzujkowski.yaml  example.yaml  test_config.yaml  williamzujkowski_2024.yaml  williamzujkowski_2025.yaml
docs/: DEPLOYMENT.md  PLAYWRIGHT_QUICK_START.md  PLAYWRIGHT_VALIDATION.md  TESTING_ANALYSIS_SUMMARY.md  TESTING_GUIDE.md  checkpoint_system.md  cli-reference.md  testing.md
docs/archive/: CHECKPOINT_IMPLEMENTATION.md  CI_ENHANCEMENT_SUMMARY.md  COLLECTION_OPTIMIZATION_ANALYSIS.md  DATETIME_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_PHASE5.md  IMPLEMENTATION_SUMMARY_PHASE6_TEST_DATA.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_QUICK_START.md  PARALLEL_PROCESSING_IMPLEMENTATION.md  PERFORMANCE_BENCHMARKS.md  PROJECT_PLAN.md  REAL_DATA_TESTING_STRATEGY.md  TESTING_INDEX.md  TESTING_QUICK_REFERENCE.md  TEST_DATA_QUICK_START.md  TEST_DATA_SETUP.md  phase-4-implementation.md  testing-with-real-data.md  testing.md
examples/: aggregator_demo.py
scripts/: README.md  benchmark.py  capture_real_fixture.sh  collect_williamzujkowski.sh  copy_test_site_data.py  generate_sample_site.py  quick_test_site.sh  setup_test_data.py
site/: index.html  manifest.webmanifest  robots.txt  sitemap.xml  sw.js
site/2024/: awards.html  base.html  engineers.html  index.html  leaderboards.html  manifest.json  repos.html  summary.html  year_index.html
site/2025/: awards.html  base.html  contributors.json  engineers.html  index.html  leaderboards.html  manifest.json  repos.html  (+3 more)
tests/: INTEGRATION_TESTS.md  LIVE_FIXTURES.md  TESTING_SUMMARY.md  __init__.py  conftest.py  test_aggregator.py  test_auth.py  test_checkpoint.py  test_cli_commands.py  test_cli_report.py  test_collect_and_aggregate.py  test_collect_comments.py  test_collect_commits.py  test_collect_issues.py  test_collect_phases.py  test_collect_pulls.py  test_collect_repos.py  test_collect_reviews.py  test_config.py  test_discovery.py  test_end_to_end.py  test_filters.py  test_github_graphql.py  test_github_integration.py  test_http.py  test_hygiene.py  test_identity.py  test_integration.py  test_large_org_integration.py  test_live_fixtures_demo.py  test_logging.py  test_manifest.py  test_metrics_awards.py  test_metrics_hygiene.py  test_metrics_leaderboards.py  test_metrics_orchestrator.py  test_metrics_repo_health.py  test_metrics_timeseries.py  test_normalize_comments.py  test_normalize_commits.py  (+34 more)
(+152 files in other folders)
